RESOLVED FIXED25194
Fix a caller of Settings::javaScriptCanOpenWindowsAutomatically
https://bugs.webkit.org/show_bug.cgi?id=25194
Summary Fix a caller of Settings::javaScriptCanOpenWindowsAutomatically
Eric Roman
Reported 2009-04-14 17:31:09 PDT
This was renamed in <http://trac.webkit.org/changeset/42454> from: Settings::JavaScriptCanOpenWindowsAutomatically to: Settings:javaScriptCanOpenWindowsAutomatically Patch coming.
Attachments
fix name to start with lowercase (1.19 KB, patch)
2009-04-14 17:32 PDT, Eric Roman
darin: review+
Eric Roman
Comment 1 2009-04-14 17:32:05 PDT
Created attachment 29482 [details] fix name to start with lowercase
Darin Fisher (:fishd, Google)
Comment 2 2009-04-15 10:20:48 PDT
Note You need to log in before you can comment on or make changes to this bug.