2009-04-15  Eric Roman  <eroman@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25194

        Fix a caller of Settings::javaScriptCanOpenWindowsAutomatically() to
        use the new name.

        * bindings/v8/custom/V8DOMWindowCustom.cpp:



Canonical link: https://commits.webkit.org/34594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42542 268f45cc-cd09-0410-ab3c-d52691b4dbfc